bk_ida/gccida/c3/x86_field_alignment
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/x86_field_alignment/src/i386.c:13113:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( _DWORD)v5 != 16 && ( _DWORD)v5 != 22 && ( mode_class_0[v5] | 4) != 5 ) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/x86_field_alignment/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/x86_field_alignment/src/obj/i386.o] Error 1
